--- a/wellQuest/home/templates/home.html
+++ b/wellQuest/home/templates/home.html
@@ -7,7 +7,14 @@
     <meta name="description" content="wellQuest Web Application Home Page">
     <meta name="author" content="wellQuest">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png'%}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png'%}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png'}">
+    <link rel="manifest" href="{% static 'favicon/site.webmanifest'%}">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    
     <title>wellQuest - Home</title>
 
     <!-- Bootstrap core CSS -->
@@ -28,7 +35,7 @@
               <div class="col-12">
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
-                      <a href="index.html" class="logo">
+                      <a href="#top" class="logo">
                           <img src="{% static 'assets/images/wellQuest-logo.png'%}" alt="wellQuest">
                       </a>
                       <!-- ***** Logo End ***** -->
@@ -40,8 +47,8 @@
                               <a href="javascript:void(0)">Available Apps</a>
                               <ul class="sub-menu">
                                   <li><a href="{% url 'cal_count' %}" target="_blank">Calorie Count</a></li>
-                                  <li><a href="#" target="_blank">Mental Health</a></li>
-                                  <li><a href="#">Diet Planner</a></li>
+                                  <li><a href="#" target="_blank">Mental Wellness</a></li>
+                                  <li><a href="{% url 'fitness_index' %}" target="_blank">Fitness Index</a></li>
                                   <li><a href="{% url 'exercises' %}" target="_blank">Find Exercise!</a></li>
                               </ul>
                           </li>
@@ -282,6 +289,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d56070.61966685545!2d77.33599584869691!3d28.557336560868816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1shospitals%20near%20me!5e0!3m2!1sen!2sin!4v1705863682378!5m2!1sen!2sin" width="100%" height="420px" frameborder="0" style="border:0; border-radius: 15px; position: relative; z-index: 2;" allowfullscreen=""></iframe>
             <div class="row">
               <div class="col-lg-4 offset-lg-1">
+
                 <div class="contact-info">
                   <div class="icon">
                     <i class="fa fa-hospital-o"></i>
@@ -289,8 +297,10 @@
                   <h4>Hospitals</h4>
                   <span>Near By You!</span>
                 </div>
+
               </div>
               <div class="col-lg-4">
+
                 <div class="contact-info">
                   <div class="icon">
                     <i class="fa fa-connectdevelop"></i>
@@ -298,6 +308,7 @@
                   <h4>Mail Us at</h4>
                   <span>wq@gmail.com</span>
                 </div>
+
               </div>
             </div>
           </div>
