--- a/wellQuest/home/templates/home.html
+++ b/wellQuest/home/templates/home.html
@@ -47,7 +47,7 @@
                               <a href="javascript:void(0)">Available Apps</a>
                               <ul class="sub-menu">
                                   <li><a href="{% url 'cal_count' %}" target="_blank">Calorie Count</a></li>
-                                  <li><a href="#" target="_blank">Mental Wellness</a></li>
+                                  <li><a href="{% url 'mental_wellness' %}" target="_blank">Mental Wellness</a></li>
                                   <li><a href="{% url 'fitness_index' %}" target="_blank">Fitness Index</a></li>
                                   <li><a href="{% url 'exercises' %}" target="_blank">Find Exercise!</a></li>
                               </ul>
@@ -314,7 +314,7 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <form id="contact" action="" method="post">
+          <form id="contact">
             <div class="row">
               <div class="col-lg-12">
                 <div class="section-heading">
@@ -339,9 +339,9 @@
                 </fieldset>
               </div>
               <div class="col-lg-12">
-                <fieldset>
+                <!-- <fieldset> -->
                   <button type="submit" id="form-submit" class="main-gradient-button">Send Message</button>
-                </fieldset>
+                <!-- </fieldset> -->
               </div>
             </div>
           </form>
