--- a/wellQuest/home/templates/home.html
+++ b/wellQuest/home/templates/home.html
@@ -29,6 +29,7 @@
 
 <body>
   <!-- ***** Header Area Start ***** -->
+  {% csrf_token %}
   <header class="header-area header-sticky">
       <div class="container">
           <div class="row">
