--- a/wellQuest/static/find_exe.css
+++ b/wellQuest/static/find_exe.css
@@ -59,15 +59,15 @@
     width: 85%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -47%);
     text-align: center;
 }
 .title{
-    font-size: large;
+    font-size: 100%;
     font-family: Arial Black;
 }
 .subtitle{
-    font-size: medium;
+    font-size: 100%;
     margin-bottom: auto;
 }
 .exercise{
@@ -148,7 +148,7 @@ color: #fff;
     float: center;
     color: white;
     border-color: white;
-    margin-top: -2%;
+    margin-top: -4%;
 }
 .btn-default:hover{
     color: black;
