--- a/wellQuest/cal_count/templates/cal_count.html
+++ b/wellQuest/cal_count/templates/cal_count.html
@@ -28,7 +28,7 @@
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-8 text-center">
-                  <img src="{% static 'images/logo.png' %}" class="img-responsive logo mb-5 mt-5" />
+                  <img src="{% static 'Images/Logo.png' %}" class="img-responsive logo mb-5 mt-5" />
                   <form method="POST">
                       {%csrf_token%}
                       <div class="input-group input-group-lg mb-5">
@@ -42,7 +42,7 @@
                   {%else%}
                   <h1>{{api.0.name | capfirst}} has a total of <strong> {{api.0.calories}} Calories</strong>
                     {%if api.0.calories > 200%}
-                     <img src="{% static 'images/shocked.png' %}" class="img-responsive" />
+                     <img src="{% static 'Images/shocked.png' %}" class="img-responsive" />
                      {%endif%}
                   </h1>
                         {%if api.0.sodium_mg > 1000%}
@@ -83,7 +83,7 @@
                           <h4 class="mt-3 mb-4">To burn {{api.0.calories}} calories you will have to</h4>
                           <div class="d-flex align-items-center mb-5">
                               <div class="flex-shrink-0">
-                                  <img src="{% static 'images/running.png' %}" alt="...">
+                                  <img src="{% static 'Images/running.png' %}" alt="...">
                               </div>
                               <div class="flex-grow-1 ms-3">
                                   <h5> Jog </h5>
@@ -92,7 +92,7 @@
                           </div>
                           <div class="d-flex align-items-center mb-5">
                               <div class="flex-shrink-0">
-                                  <img src="{% static 'images/yoga.png' %}" alt="...">
+                                  <img src="{% static 'Images/yoga.png' %}" alt="...">
                               </div>
                               <div class="flex-grow-1 ms-4">
                                   <h5> Do Power Yoga </h5>
@@ -101,7 +101,7 @@
                           </div>
                           <div class="d-flex align-items-center mb-5">
                               <div class="flex-shrink-0">
-                                  <img src="{% static 'images/weightlifter.png' %}" alt="...">
+                                  <img src="{% static 'Images/weightlifter.png' %}" alt="...">
                               </div>
                               <div class="flex-grow-1 ms-4">
                                   <h5>Get a Gym Workout </h5>
@@ -110,7 +110,7 @@
                           </div>
                           <div class="d-flex align-items-center">
                               <div class="flex-shrink-0">
-                                  <img src="{% static 'images/walking.png' %}" alt="...">
+                                  <img src="{% static 'Images/walking.png' %}" alt="...">
                               </div>
                               <div class="flex-grow-1 ms-1">
                                   <h5> Go for a Brisk Walk </h5>
