--- a/wellQuest/fitness_index/templates/bmi.html
+++ b/wellQuest/fitness_index/templates/bmi.html
@@ -32,7 +32,7 @@
       <span class="checkmark"></span>
     </label>
     </div>
-  
+
   <div class="row-two">
     <input type="text" class="text-input" id="height" autocomplete="off" required><p class="text">Height (cm)</p>
     <input type="text" class="text-input" id="weight" autocomplete="off" required><p class="text">Weight (kg)</p>
@@ -46,7 +46,7 @@
       var male = document.getElementById("m");
       var female = document.getElementById("f");
       var form = document.getElementById("form");
-  
+
   function validateForm(){
     if(age.value=='' || height.value=='' || weight.value=='' || (male.checked==false && female.checked==false)){
       alert("All fields are required!");
@@ -56,7 +56,7 @@
     }
   }
   document.getElementById("submit").addEventListener("click", validateForm);
-  
+
   function countBmi(){
     var p = [age.value, height.value, weight.value];
     if(male.checked){
@@ -66,7 +66,7 @@
     }
     form.reset();
     var bmi = Number(p[2])/(Number(p[1])/100*Number(p[1])/100);
-        
+
     var result = '';
     if(bmi<18.5){
       result = 'Underweight';
@@ -79,23 +79,23 @@
        }else if(35<=bmi){
       result = 'Extremely obese';
     }
-    
+
         var h1 = document.createElement("h1");
         var h2 = document.createElement("h2");
-  
+
         var t = document.createTextNode(result);
         var b = document.createTextNode('BMI: ');
         var r = document.createTextNode(parseFloat(bmi).toFixed(2));
-        
+
         h1.appendChild(t);
         h2.appendChild(b);
         h2.appendChild(r);
-        
+
         var footerElement = document.querySelector('.content-container');
 
         footerElement.parentNode.insertBefore(h2, footerElement);
         footerElement.parentNode.insertBefore(h1, footerElement);
-      
+
         document.getElementById("submit").removeEventListener("click", countBmi);
         document.getElementById("submit").removeEventListener("click", validateForm);
       }
@@ -106,9 +106,9 @@
 
     <div class="content-container" style="padding: 1% 15% 1% 15%; text-align: center; align-items: center;">
       <p style="font-family: monospace;">Body Mass Index (BMI) is a measure of body fat based on weight and height, providing a numerical assessment of a person's overall body composition. It is commonly used as an indicator of whether an individual is underweight, normal weight, overweight, or obese.</p>
-      <img src="{% static 'images/bmi.jpg'%}" style="width: 100%; height: auto; border-radius: 15px; margin-top: 4%;">
+      <img src="{% static 'Images/bmi.jpg'%}" style="width: 100%; height: auto; border-radius: 15px; margin-top: 4%;">
     </div>
-    
+
     <footer class="site-footer" style="position: relative; align-items: center;">
           <ul class="social-icons">
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
