--- a/wellQuest/mental_health/templates/mental_health.html
+++ b/wellQuest/mental_health/templates/mental_health.html
@@ -7,10 +7,10 @@
 
         <title>Mental Wellness</title>
 
-        <!-- CSS FILES -->        
+        <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Sono:wght@200;300;400;500;700&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Sono:wght@200;300;400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
         <link rel="stylesheet" href="{% static 'css/bootstrap-icons.css'%}">
         <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css'%}">
@@ -26,7 +26,7 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
     </head>
-    
+
     <body>
 
         <main>
@@ -34,7 +34,7 @@
             <header class="site-header d-flex flex-column justify-content-center align-items-center">
                 <div class="container">
                     <div class="row">
-                        <img src="{% static 'images/mental_health_logo1.jpg'%}" class="logo-image img-fluid" alt="Mental health logo" style="width: 100%; height: 30%; margin-left: auto; margin-right: auto; border-radius: 40px; margin-top: 3%;">
+                        <img src="{% static 'Images/mental_health_logo1.jpg'%}" class="logo-image img-fluid" alt="Mental health logo" style="width: 100%; height: 30%; margin-left: auto; margin-right: auto; border-radius: 40px; margin-top: 3%;">
                         <div class="col-lg-12 col-12 text-center">
                             <h1 class="mb-0" style="color: #5170d4; margin-top: 4%;">Mental Wellness</h1>
                         </div>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </header>
-            
+
 
             <section class="about-section section-padding" id="section_2">
                 <div class="container">
@@ -58,7 +58,7 @@
 
                                 <p>You can find amazing video and text contents regarding meditation, anxiety disorders, motivationl sessions and therapeutic contents at one place.</p>
 
-                                <img src="{% static 'images/Mental_subject.jpg'%}" class="about-image mt-5 img-fluid" alt="">
+                                <img src="{% static 'Images/Mental_subject.jpg'%}" class="about-image mt-5 img-fluid" alt="">
                             </div>
                         </div>
 
@@ -67,10 +67,10 @@
                                 <h4 class="section-title">Contents on Mental Wellness</h4>
                             </div>
                         </div>
-                        
+
                         <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                             <div class="team-thumb bg-white shadow-lg">
-                                <img src="{% static 'images/meditation.png'%}" class="about-image img-fluid" alt="">
+                                <img src="{% static 'Images/meditation.png'%}" class="about-image img-fluid" alt="">
 
                                 <div class="team-info">
                                     <h4 class="mb-2">
@@ -85,7 +85,7 @@
                                             <li class="social-icon-item">
                                                 <a href="https://www.youtube.com/playlist?list=PLQiGxGHwiuD1kdxsWKFuhE0rITIXe-7yC" class="social-icon-link bi-youtube"></a>
                                             </li>
-                                            
+
                                             <li class="social-icon-item">
                                                 <a href="https://www.quora.com/How-has-meditation-changed-your-life-1" class="social-icon-link bi-quora"></a>
                                             </li>
@@ -96,7 +96,7 @@
 
                         <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                             <div class="team-thumb bg-white shadow-lg">
-                                <img src="{% static 'images/anxiety.jpg'%}" class="about-image img-fluid" alt="">
+                                <img src="{% static 'Images/anxiety.jpg'%}" class="about-image img-fluid" alt="">
 
                                 <div class="team-info">
                                     <h4 class="mb-2">
@@ -111,7 +111,7 @@
                                         <li class="social-icon-item">
                                             <a href="https://www.youtube.com/watch?v=RPyzPH8sB2A&list=PLiUrrIiqidTVNQB5GrD2uh-bmfUGGwh-z" class="social-icon-link bi-youtube"></a>
                                         </li>
-                                        
+
                                         <li class="social-icon-item">
                                             <a href="https://www.quora.com/How-do-I-get-over-anxiety" class="social-icon-link bi-quora"></a>
                                         </li>
@@ -122,7 +122,7 @@
 
                         <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0 mb-md-0">
                             <div class="team-thumb bg-white shadow-lg">
-                                <img src="{% static 'images/motivation.jpg'%}" class="about-image img-fluid" alt="">
+                                <img src="{% static 'Images/motivation.jpg'%}" class="about-image img-fluid" alt="">
 
                                 <div class="team-info">
                                     <h4 class="mb-2">
@@ -138,11 +138,11 @@
                                                 <a href="https://www.youtube.com/watch?v=mgmVOuLgFB0&list=PLriLgVg0-Kgzu0Y-Rz2ofUT1E53lUjh_T
                                                 " class="social-icon-link bi-youtube"></a>
                                             </li>
-                                            
+
                                             <li class="social-icon-item">
                                                 <a href="https://www.pinterest.com/hbharvest/inspiring/" class="social-icon-link bi-pinterest"></a>
                                             </li>
-                                    
+
                                         </ul>
                                     </div>
                             </div>
@@ -150,11 +150,11 @@
 
                         <div class="col-lg-3 col-md-6 col-12">
                             <div class="team-thumb bg-white shadow-lg">
-                                <img src="{%static 'images/therapy.jpg'%}" class="about-image img-fluid" alt="">
+                                <img src="{%static 'Images/therapy.jpg'%}" class="about-image img-fluid" alt="">
 
                                 <div class="team-info">
                                     <h4 class="mb-2">
-                                        Therapeautic 
+                                        Therapeautic
                                     </h4>
                                     <span class="badge">Curing</span>
                                 </div>
@@ -164,11 +164,11 @@
                                         <li class="social-icon-item">
                                             <a href="https://www.youtube.com/watch?v=lCOF9LN_Zxs" class="social-icon-link bi-youtube"></a>
                                         </li>
-                                        
+
                                         <li class="social-icon-item">
                                             <a href="https://www.quora.com/What-is-a-good-mental-health-blog" class="social-icon-link bi-quora"></a>
                                         </li>
-                
+
                                     </ul>
                                 </div>
                             </div>
@@ -185,7 +185,7 @@
 
         </main>
 
-        
+
 
         <footer class="site-footer">
             <div class="container">
