--- a/wellQuest/home/templates/home.html
+++ b/wellQuest/home/templates/home.html
@@ -45,12 +45,12 @@
                           <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                           <li class="scroll-to-section"><a href="#mentors">Fitness Mentors</a></li>
                           <li class="has-sub">
-                              <a href="javascript:void(0)">Available Apps</a>
+                              <a href="javascript:void(0)">Our Services</a>
                               <ul class="sub-menu">
+                                  <li><a href="{% url 'exercises' %}" target="_blank">Find Exercise!</a></li>
                                   <li><a href="{% url 'cal_count' %}" target="_blank">Calorie Count</a></li>
                                   <li><a href="{% url 'mental_wellness' %}" target="_blank">Mental Wellness</a></li>
                                   <li><a href="{% url 'fitness_index' %}" target="_blank">Fitness Index</a></li>
-                                  <li><a href="{% url 'exercises' %}" target="_blank">Find Exercise!</a></li>
                               </ul>
                           </li>
                           <li class="scroll-to-section"><a href="#motivations">Motivations</a></li> 
